# eaa-tauri

./: .gitignore  start.sh
.github/workflows/: build.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ArchiveView.tsx  ReadyStatus.tsx  RuleEditor.tsx  RuleManager.tsx  ScriptEditor.tsx  ScriptManager.tsx  ScriptRunner.tsx  Settings.tsx
frontend/src/lib/: api.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: archive.rs  mod.rs  rules.rs  scripts.rs  settings.rs  status.rs
src-tauri/src/core/: archiver.rs  config.rs  date_extractor.rs  date_utils.rs  file_scanner.rs  history_cleaner.rs  logger.rs  mod.rs  rule_engine.rs  script_runner.rs
src-tauri/src/excel/: reader.rs
