[package]
name = "eaa-tauri"
version = "1.0.0"
description = "Excel Auto Archive Tool"
authors = ["you"]
edition = "2021"

[lib]
name = "eaa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
calamine = "0.26"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
regex-lite = "0.1"
which = "7"
tokio = { version = "1", features = ["full"] }
dirs = "6.0.0"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
